# un-virtual-eye-tracker

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml  other.yaml
.github/workflows/: ci.yml  release-package.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  npclient64_shim.rs  trackir_dummy.rs  uninstall_compatible_layers.rs
apps/desktop/src/lib/: runtime.ts
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: calibration.rs  error.rs  filter.rs  lib.rs  logging.rs  mapping.rs  model.rs  ports.rs  state.rs
crates/input-ifacialmocap/: Cargo.toml
crates/input-ifacialmocap/src/: lib.rs
crates/input-ifacialmocap/tests/: tcp_stream.rs  udp_parsing.rs
crates/input-vmc-osc/: Cargo.toml
crates/input-vmc-osc/src/: lib.rs
crates/output/: Cargo.toml
crates/output-ets2/: Cargo.toml
crates/output-ets2/src/: lib.rs
crates/output-keyboard/: Cargo.toml
crates/output-keyboard/src/: lib.rs
crates/output-mouse/: Cargo.toml
crates/output-mouse/src/: lib.rs
crates/output-touch/: Cargo.toml
crates/output-touch/src/: lib.rs
crates/output/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/unvet-cli/: Cargo.toml  build.rs
crates/unvet-cli/src/: main.rs
docs/: architecture.md  clean-room-compatibility.md  gui-guidelines.md  index.md  plan.md  release-1.1.0.md  roadmap.md
docs/archive/: plan.md
images/: README.md
tools/: check-clean-room.ps1  make-release-package.ps1
xtask/: Cargo.toml
xtask/src/: bump_version.rs  check_clean_room.rs  main.rs  make_release_package.rs
