[workspace]
members = [
 "crates/app",
 "crates/core",
 "crates/config",
 "crates/input-ifacialmocap",
 "crates/output-ets2",
 "crates/output-mouse",
 "crates/output-keyboard",
 "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["UNVET Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
