[workspace]
members = [
 "apps/desktop/src-tauri",
 "crates/unvet-cli",
 "crates/core",
 "crates/config",
 "crates/input-ifacialmocap",
 "crates/input-vmc-osc",
 "crates/output-ets2",
 "crates/output-mouse",
 "crates/output-touch",
 "crates/output-keyboard",
 "crates/output",
 "crates/ui",
 "xtask",
]
default-members = ["apps/desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2024"
license = "MIT"
authors = ["UNVET Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
