[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde_json = "1.0"
walkdir = "2.5"
zip = { version = "2.3", default-features = false, features = ["deflate"] }
