[package]
name = "unvet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
unvet-config = { path = "../config" }
unvet-core = { path = "../core" }
unvet-input-ifacialmocap = { path = "../input-ifacialmocap" }
unvet-input-vmc-osc = { path = "../input-vmc-osc" }
unvet-output = { path = "../output" }

[build-dependencies]
winres = "0.1"
