[package]
name = "unvet-desktop"
version = "1.3.0"
description = "UNVET desktop control UI"
authors = ["UNVET Contributors"]
license = "MIT"
repository = "https://github.com/usagi/un-virtual-eye-tracker"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unvet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
unvet-config = { path = "../../../crates/config" }
unvet-core = { path = "../../../crates/core" }
unvet-input-ifacialmocap = { path = "../../../crates/input-ifacialmocap" }
unvet-input-vmc-osc = { path = "../../../crates/input-vmc-osc" }
unvet-output = { path = "../../../crates/output" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
